production/microk8s.1.26/observability.ingress.prometheus.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-k8s-ingress
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: prometheus.k8s.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kube-prom-stack-kube-prome-prometheus
              port:
                number: 443
